 * Upload component now places "add another file" under some javascript
    and pops up a warning before showing it.
 * lookup/name now filters on eprint_status=archive

2006-11-02 cjg
 * Fixed bug in expand/close on subjects with multiple parents
 
2006-11-02 cjg
 * Added "public" field to saved searches.
 * Added "items_fields" and "review_fields" to users.
 * Added epadmin upgrade to update the database.
 * Added items_fields and review_fields to user workflow.

2006-11-03 cjg
 * Fixed bug with get_values which meant it returned values from all
    datasets of eprint, not just the requested one.

2006-11-04 tdb 
 * Added more fields to openurl resolver
 * Added support for svc.fulltext=yes to openurl resolver

2006-11-03 cjg
 * Fixed some broken parameters in render_citation_link
 * Changed the way searches are serialised. They now store both the field
    names and the alias. Also separates filters and normal search fields.
 * Can deserialise a search safely, into an existing search, or raw which
    creates all the conditions from the serialised search.
 * Removed UserPage and UserForm - no longer used.
 * Added option to save searches
 * Added saved search view, edit and remove
 * New MetaField type - Field
 * Made items_fields and review_fields type "field"
 * New option to multiple set fields to allow them to be ordered.
 * Added filtering options to Items page (needs tidying up) 

2006-11-03 cjg
 * Moved soap code out of normal cgi dir.

2006-11-03 cjg
 * Indexer now cleans up suicide file when it starts.
 * Indexer stop now tries the suicide file approach before trying kill.

2006-11-04 cjg
 * Workflow can now override help for a field.
 * Removed type-based help.
 * New XML utility method: contents_of which returns the children of a
    node in a doc fragment.

2006-11-04 cjg
 * Subjects now work inside compound fields

2006-11-05 cjg 
 * Added "Add User" feature
 * Tidied up citations/user/screen.xml
 * Fixed bug in rendering user/screen citation 